--- a/TexasHoldem.AI.AllInPlayer/TexasHoldem.AI.AllInPlayer.csproj
+++ b/TexasHoldem.AI.AllInPlayer/TexasHoldem.AI.AllInPlayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{58D705BF-8F7E-4555-ADE2-5FFD4A2A4C25}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{EA287442-8932-4CED-813D-B232B99CF17B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TexasHoldem.UI.Console</RootNamespace>
-    <AssemblyName>TexasHoldem.UI.Console</AssemblyName>
+    <RootNamespace>TexasHoldem.AI.AllInPlayer</RootNamespace>
+    <AssemblyName>TexasHoldem.AI.AllInPlayer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,9 +29,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,29 +39,16 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="TexasHoldem.Logic, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\TexasHoldemGameEngine.1.1.0\lib\TexasHoldem.Logic.dll</HintPath>
+      <HintPath>..\packages\TexasHoldemGameEngine.1.1.0\lib\TexasHoldem.Logic.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleHelper.cs" />
-    <Compile Include="ConsolePlayer.cs" />
-    <Compile Include="ConsoleUiDecorator.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="AllInPlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\AI\TexasHoldem.AI.Bluffasaurus\TexasHoldem.AI.Bluffasaurus.csproj">
-      <Project>{2dc4c6a0-3f09-4cbe-aaa2-76c6b7b08081}</Project>
-      <Name>TexasHoldem.AI.Bluffasaurus</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\GameSimulations\TexasHoldem.GameSimulations\TexasHoldem.GameSimulations.csproj">
-      <Project>{fd947574-f557-4ef3-a6f6-5113355291b4}</Project>
-      <Name>TexasHoldem.GameSimulations</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
